--- a/src/stories/avatar.css
+++ b/src/stories/avatar.css
@@ -4,7 +4,7 @@
     justify-content: center;
 
     border-radius: 50%;
-    background-color: #555ab9;
+    background-color: #10179b;
     color: white;
 
     font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
